;;
;; fun-apps package
;;
[metadata]
name = fun-apps
version = funwb-1.0.0
description = FUN MOOC applications
long_description = file: README.md
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/fun-apps
license= AGPL 3.0
keywords = Django, Open edX, MOOC
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    django-bootstrap-form==3.2
    django-ckeditor-updated==4.4.4
    django-contact-form==1.0
    django-haystack==2.4.1
    django-pure-pagination==0.2.1
    django-masquerade==1.3
    django-solo==1.0.3
    easy-thumbnails==2.2
    edx-gea==0.2.0
    glowbl-xblock==0.2.0
    oauth2client==3.0.0
    google-api-python-client==1.5.1
    hashids==1.1.0
    libcast-xblock==0.5.0
    password-container-xblock==0.3.0
    proctoru-xblock==1.2.0
    pycaption==0.4.6
    raven==5.25.0
    unicodecsv==0.9.4
    xblock-utils2==0.3.0
packages = find:
zip_safe = False

[options.extras_require]
dev =
    django-babel-underscore==0.5.2
    fun-cmd==0.2.0
    pylint==1.5.4
    wheel
ipython =
    ipython-xblock==0.2.0

[wheel]
universal = 1
